progress
- delete / update on user ( password and account )
- swagger tests
- model updated
